gcc/testsuite/rust/rustc/ui/associated-type-bounds/implied-bounds-cycle.rs
trait A {
    type T;
}

trait B: A<T: B> {}
// { dg-error ".E0391." "" { target *-*-* } .-1 }

fn main() {}

